Add frontend angular user fe